--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.1.2",
-    "native-base": "^2.8.0",
-    "react": "16.5.0",
-    "react-native": "0.57.1",
-    "react-native-drawer": "^2.5.0",
+    "react": "^16.5.0",
+    "react-native": "^0.57.1",
+    "react-native-drawer": "^2.5.1",
+    "react-native-elements": "^0.19.1",
     "react-native-navigation": "^1.1.487",
-    "react-navigation": "git+https://github.com/react-community/react-navigation.git",
+    "react-native-paper": "^2.0.1",
+    "react-native-vector-icons": "^6.0.0",
+    "react-navigation": "^2.17.0",
+    "react-navigation-material-bottom-tabs": "^0.4.0",
     "save": "^2.3.2"
   },
   "devDependencies": {
