--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.5.0",
     "react-native": "0.57.1",
     "react-native-drawer": "^2.5.0",
+    "react-native-elements": "^0.19.1",
     "react-native-navigation": "^1.1.487",
     "react-navigation": "git+https://github.com/react-community/react-navigation.git",
     "save": "^2.3.2"
