--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-native-drawer": "^2.5.0",
     "react-native-elements": "^0.19.1",
     "react-native-navigation": "^1.1.487",
-    "react-navigation": "git+https://github.com/react-community/react-navigation.git",
+    "react-navigation": "^2.18.0",
     "save": "^2.3.2"
   },
   "devDependencies": {
