--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "react-native-drawer": "^2.5.0",
     "react-native-elements": "^0.19.1",
     "react-native-navigation": "^1.1.487",
+    "react-native-paper": "^2.1.3",
+    "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.0",
+    "react-navigation-material-bottom-tabs": "^0.4.0",
     "save": "^2.3.2"
   },
   "devDependencies": {
