--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "native-base": "^2.8.0",
     "react": "16.5.0",
     "react-native": "0.57.1",
+    "react-native-deck-swiper": "^1.5.22",
     "react-native-drawer": "^2.5.0",
     "react-native-elements": "^0.19.1",
     "react-native-navigation": "^1.1.487",
