--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-deck-swiper": "^1.5.22",
     "react-native-drawer": "^2.5.0",
     "react-native-elements": "^0.19.1",
+    "react-native-keyboard-aware-scroll-view": "^0.7.4",
     "react-native-navigation": "^1.1.487",
     "react-native-paper": "^2.1.3",
     "react-native-search-bar": "^3.4.2",
