--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-drawer": "^2.5.0",
     "react-native-elements": "^0.19.1",
     "react-native-maps": "^0.22.1",
+    "react-native-material-textfield": "^0.12.0",
     "react-native-navigation": "^1.1.487",
     "react-native-paper": "^2.1.3",
     "react-native-search-bar": "^3.4.2",
