Add Redux, Update Cart View, Search View

--- a/ios/ShoppingApp/Info.plist
+++ b/ios/ShoppingApp/Info.plist
@@ -73,6 +73,10 @@
 		<string>Roboto_medium.ttf</string>
 		<string>Roboto.ttf</string>
 		<string>rubicon-icon-font.ttf</string>
+		<string>Black Melody - Personal Use.otf</string>
+		<string>Medinah.ttf</string>
+		<string>Sawarabi Mincho Medium.otf</string>
+		<string>Sawarabi Gothic Medium.otf</string>
 	</array>
 </dict>
 </plist>
