--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.1.2",
+    "axios": "^0.18.0",
     "expo": "^30.0.1",
+    "immutable": "^4.0.0-rc.12",
     "native-base": "^2.8.0",
     "react": "16.5.0",
     "react-native": "0.57.1",
@@ -23,6 +25,11 @@
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.0",
     "react-navigation-material-bottom-tabs": "^0.4.0",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
+    "redux-immutable": "^4.0.0",
+    "redux-saga": "^0.16.2",
+    "reselect": "^4.0.0",
     "save": "^2.3.2"
   },
   "devDependencies": {
@@ -33,5 +40,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "assets/fonts/"
+    ]
   }
 }
