--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-navigation": "^1.1.487",
     "react-native-paper": "^2.1.3",
+    "react-native-remote-svg": "^1.3.0",
     "react-native-search-bar": "^3.4.2",
     "react-native-snap-carousel": "^3.7.5",
     "react-native-swiper": "^1.5.13",
