--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-material-textfield": "^0.12.0",
     "react-native-navigation": "^1.1.487",
     "react-native-paper": "^2.1.3",
+    "react-native-radio-buttons-group": "^1.0.7",
     "react-native-remote-svg": "^1.3.0",
     "react-native-search-bar": "^3.4.2",
     "react-native-snap-carousel": "^3.7.5",
